WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127248
Does not build with SVG disabled
https://bugs.webkit.org/show_bug.cgi?id=127248
Summary
Does not build with SVG disabled
Alberto Garcia
Reported
2014-01-19 04:44:11 PST
In file included from ../../Source/WebCore/dom/Element.h:30: ../../Source/WebCore/dom/ElementData.h:116:79: error: use of undeclared identifier 's_flagAnimatedSVGAttributesAreDirty'; did you mean 'setAnimatedSVGAttributesAreDirty'? This broke in
r162274
Attachments
Patch
(1.38 KB, patch)
2014-01-19 04:45 PST
,
Alberto Garcia
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2014-01-19 04:45:15 PST
Created
attachment 221583
[details]
Patch
Sam Weinig
Comment 2
2014-01-19 10:55:38 PST
Comment on
attachment 221583
[details]
Patch r=me. As a side question, why are you building without SVG? I don't think it makes sense in the long run for us to support this build style (any more than we should support a build without tables), so I would like to figure out what people are using this for.
Alberto Garcia
Comment 3
2014-01-19 11:09:00 PST
Committed
r162295
: <
http://trac.webkit.org/changeset/162295
>
Alberto Garcia
Comment 4
2014-01-19 11:19:26 PST
(In reply to
comment #2
)
> As a side question, why are you building without SVG?
I do it once a while in my laptop because it takes less time. No other reason really.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug