Does not build with SVG disabled https://bugs.webkit.org/show_bug.cgi?id=127248

Reviewed by Sam Weinig.

Add missing #if ENABLE(SVG) guard.

* dom/ElementData.h:

Canonical link: https://commits.webkit.org/145254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162295 268f45cc-cd09-0410-ab3c-d52691b4dbfc